2013-05-15 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* AppController.h
	* Preferences.m
	* Preferences.h
        * English.lproj/MainMenu.nib
        * English.lproj/Preferences.nib
        New Preferences panel with separate class.

2013-05-08 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* AppController.h
	* Resources/DataBasin.gorm
	Progress monitor for Insert

2013-05-08 Riccardo Mottola <rm@gnu.org>

	* DBProgress.h
	* DBProgress.m
	Show remaining time in time field.

2013-05-08 Riccardo Mottola <rm@gnu.org>

	* AppController.m (executeInsert)
	Fix: read correct field

2013-05-06 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* DBSoapCSV.h
	* DBSoapCSV.m
	Save create results to file.

2013-05-05 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m (create)
	Return array of results for created objects.

2013-04-29 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	On query, set the type property.

2013-04-29 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
	* DBSObject.m
	Make type accessor, perfect name accessor, return better description.

2013-04-26 Riccardo Mottola <rm@gnu.org>

	* DBSObject.m (description)
	Return name and ID as description.

2013-04-26 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Use hard-coded ID 012000000000000AAA to identify Master Record Type.

2013-04-26 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Remove csv writer method already in DBSoapCSV, completing separation.

2013-04-24 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
	* DBSObject.m
	RecordTypes accessors.

	* DBSoap.m (describeSObject)
	Extend to interpret RecordTypes and execute a query on RecordTypes to get the developer names.

2013-04-23 Riccardo Mottola <rm@gnu.org>

	* DBProgress.h
	* DBProgress.m
	ProgressIndicator setter and update.

	* AppController.h
	* AppController.m
	* Resources/DataBasin.gorm
	ProgressIndicator for Query.

2013-04-14 Riccardo Mottola <rm@gnu.org>

	* AppController.m (executeUpdate)
	* DBSoap.m