@@ -1,6 +1,11 @@
 2013-05-15 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.m
+	Implement update for Select-Identify and Update.
+
+2013-05-15 Riccardo Mottola <rm@gnu.org>
+
+	* AppController.m
 	* AppController.h
 	* Preferences.m
 	* Preferences.h
